Refact: do TripController para melhorar a validação e manipulação de trips e da classe ValidationService para melhorar a validação de emails
- Adição de validação de emails dos participantes ao criar e atualizar uma viagem, utilizando o ValidationService.
- Melhoria no tratamento de erros ao validar emails, retornando respostas apropriadas em caso de falhas.
- Ajustes na lógica de confirmação e exclusão de viagens, garantindo a integridade dos dados dos participantes.
- Inclusão de verificação de emails do dono da viagem ao atualizar informações, com tratamento de exceções.
- Refatoração geral para melhorar a legibilidade e manutenibilidade do código.
- Implementação do método emailValidator para validar um único email utilizando Regex.
- Adição do método emailValidators para validar uma lista de emails.
- Criação de construtor privado para evitar a instanciação da classe, garantindo seu uso como classe utilitária.
- Lançamento de exceção ValidationException com mensagem descritiva em caso de email inválido.